<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wangzuxiu.traildemo.Activity.MainActivity">

    <RelativeLayout
        android:id="@+id/item_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/tv_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:layout_marginBottom="15dp"/>


        <Button
            android:id="@+id/btn_choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_file"
            android:text="@string/choose_file"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorPrimary"
            android:minHeight="30dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_file"
            android:layout_toEndOf="@+id/btn_choose_file"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/file_name_sample"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_choose_file"
            android:text="@string/description" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_description"
            android:layout_marginBottom="20dp"
            android:gravity="top|center_vertical"
            android:hint="@string/empty_description"
            android:inputType="textMultiLine"
            android:minLines="10" />

        <Space
            android:id="@+id/v_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_description"
            android:layout_above="@+id/btn_save"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />

    </RelativeLayout>


</RelativeLayout>
