<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wangzuxiu.traildemo.Activity.MainActivity">


    <RelativeLayout
        android:id="@+id/trail_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_station_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trail_name" />

        <EditText
            android:id="@+id/et_trail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_station_name"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/trail_name"
            android:inputType="text|textCapWords" />

        <TextView
            android:id="@+id/tv_trail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_trail_name"
            android:text="@string/trail_date" />

        <EditText
            android:id="@+id/et_trail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_trail_date"
            android:layout_marginBottom="20dp"
            android:hint="@string/date_format"
            android:inputType="none" />

        <Space
            android:id="@+id/v_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_save" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/save" />

    </RelativeLayout>

</RelativeLayout>
