<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wangzuxiu.traildemo.Activity.MainActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_info" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_discussions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_discussions" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_updates" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab" />

</RelativeLayout>
