<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wangzuxiu.traildemo.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">

        <!--<TextView-->
        <!--android:id="@+id/tv_station_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/station_name" />-->

        <TextView
            android:id="@+id/tv_station_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/station_name"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_station_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_station_name"
            android:layout_marginBottom="15dp"
            android:text="@string/station_location" />

        <TextView
            android:id="@+id/tv_station_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_station_location"
            android:layout_marginBottom="15dp"
            android:text="ISS, NUS, Singapore, 119605" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mv_station_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_station_address"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mv_station_location"
            android:layout_marginBottom="15dp"
            android:text="@string/station_instruction" />

        <TextView
            android:id="@+id/tv_station_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_instruction"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="top|center_vertical"
            android:minLines="5"
            android:text="Task 1: Go there ..." />

        <TextView
            android:id="@+id/tv_my_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_upload"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/v_space"
            android:text="My Updates"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Space
            android:id="@+id/v_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_station_instruction"
            android:layout_toEndOf="@+id/tv_my_updates"
            android:layout_toStartOf="@+id/btn_upload" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_station_instruction"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:minHeight="30dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/btn_upload"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line" />


    </RelativeLayout>

</RelativeLayout>
